Bug: In-page navigation becomes visible during scroll bounce at bottom of page #131336 (#701)

--- a/blocks/v2-inpage-navigation/v2-inpage-navigation.css
+++ b/blocks/v2-inpage-navigation/v2-inpage-navigation.css
@@ -66,7 +66,7 @@ then we change it for the next section item in main */
   width: 100%;
   z-index: 1;
   border-radius: 24px 24px 0 0;
-  transform: translateY(0);
+  transform: translateY(100%);
   transition: transform 450ms var(--easing-exit);
 }
 
@@ -287,6 +287,7 @@ then we change it for the next section item in main */
     padding: 0;
     display: flex;
     align-items: center;
+    transform: translateY(0);
 
     /* fix overlap issue for focus state of CTA */
     background-color: transparent;
@@ -330,5 +331,9 @@ then we change it for the next section item in main */
 
   .redesign-v2 a.button.v2-inpage-navigation__marketing:any-link {
     padding: 10px 20px;
+  }
+
+  .v2-inpage-navigation__cta-floating {
+    display: none;
   }
 }
